images move to media

--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="logo">
             <a href="index.html">
-                <img src="https://pixabay.com/get/57e9d4404c5aa514f1dc8460da293277133cd8e15b5071_640.png" alt="logo" />
+                <img src=".\media\dolphin_logo.png" alt="logo" />
             </a>
         </div>
         <div><a href="index.html">Заголовок страницы</a></div>
@@ -38,7 +38,7 @@
                 <div class="date">00.00.0000</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/50e9d5434956b10ff3d89960c62d3e781639d9e15a59_640.jpg" alt="news" />
+                <img src=".\media\dolphins.jpg" alt="news" />
             </div>
             <div class="article-text">
                 Заголовок, блок article-meta (дата публикации, автор),
@@ -58,7 +58,7 @@
                 <div class="date">11.11.1111</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/57e2dd474e53a514f1dc8460da293277133cd8e25b5674_640.jpg">
+                <img src=".\media\feet.jpg">
             </div>
             <div class="article-text">
                 Теперь несколько раз продублируйте блок article
@@ -79,7 +79,7 @@
                 <div class="date">22.22.2222</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/5ee3dc404b51b10ff3d89960c62d3e781638dee55b50_640.jpg">
+                <img src=".\media\fun.jpg">
             </div>
             <div class="article-text">
                 При использовании технологии Grid CSS легко создать
@@ -100,7 +100,7 @@
                 <div class="date">33.33.3333</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/5fe1dd464950b10ff3d89960c62d3e781638dae15054_640.jpg">
+                <img src=".\media\sea.jpg">
             </div>
             <div class="article-text">
                 Выше мы добавили последние стили. Задали цвет фону блока новостей. 
@@ -120,7 +120,7 @@
                 <div class="date">44.44.4444</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/57e0dd42435aab14f1dc8460da293277133cd9e1565371_640.jpg">
+                <img src=".\media\dolphins.jpg">
             </div>
             <div class="article-text">
                 Введите свой ответ на вопрос. Вы можете сохранить свою работу и завершить её 
