fix images size

--- a/news.html
+++ b/news.html
@@ -38,7 +38,7 @@
                 <div class="date">00.00.0000</div>
             </div>
             <div class="article-image">
-                <img src=".\media\dolphins.jpg" alt="news" />
+                <img src="./media/dolphins.jpg" alt="news" />
             </div>
             <div class="article-text">
                 Заголовок, блок article-meta (дата публикации, автор),
@@ -100,7 +100,7 @@
                 <div class="date">33.33.3333</div>
             </div>
             <div class="article-image">
-                <img src=".\media\sea.jpg">
+                <img src=".\media\bear.jpg">
             </div>
             <div class="article-text">
                 Выше мы добавили последние стили. Задали цвет фону блока новостей. 
@@ -120,7 +120,7 @@
                 <div class="date">44.44.4444</div>
             </div>
             <div class="article-image">
-                <img src=".\media\dolphins.jpg">
+                <img src="media/swimmers.jpg">
             </div>
             <div class="article-text">
                 Введите свой ответ на вопрос. Вы можете сохранить свою работу и завершить её 
@@ -140,7 +140,7 @@
                 <div class="date">55.55.5555</div>
             </div>
             <div class="article-image">
-                <img src="https://pixabay.com/get/51e9d3434c4faa0df7c5997cc221317d123bdbe152_640.jpg">
+                <img src="media/woman.jpg">
             </div>
             <div class="article-text">
                 На выполнение этого задания вам даётся три недели с открытия модуля. 
