--- a/testcss.html
+++ b/testcss.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Заголовок страницы</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="testcssstyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="logo">
             <a href="index.html">
-                <img src=".\media\dolphin_logo.png" alt="logo" />
+                <img src="https://cdn.pixabay.com/photo/2015/10/04/16/49/soft-971359_960_720.png" alt="logo" />
             </a>
         </div>
         <div><a href="index.html">Заголовок страницы</a></div>
@@ -38,7 +38,7 @@
                 <div class="date">00.00.0000</div>
             </div>
             <div class="article-image">
-                <img src="./media/dolphins.jpg" alt="news" />
+                <img src="https://cdn.pixabay.com/photo/2014/08/20/14/56/swim-422546_960_720.jpg" alt="news" />
             </div>
             <div class="article-text">
                 Заголовок, блок article-meta (дата публикации, автор),
@@ -58,7 +58,7 @@
                 <div class="date">11.11.1111</div>
             </div>
             <div class="article-image">
-                <img src=".\media\feet.jpg">
+                <img src="https://cdn.pixabay.com/photo/2013/02/09/04/23/swimmers-79592_960_720.jpg">
             </div>
             <div class="article-text">
                 Теперь несколько раз продублируйте блок article
@@ -79,7 +79,7 @@
                 <div class="date">22.22.2222</div>
             </div>
             <div class="article-image">
-                <img src=".\media\fun.jpg">
+                <img src="https://cdn.pixabay.com/photo/2016/11/22/21/43/fun-1850709_960_720.jpg">
             </div>
             <div class="article-text">
                 При использовании технологии Grid CSS легко создать
@@ -100,7 +100,7 @@
                 <div class="date">33.33.3333</div>
             </div>
             <div class="article-image">
-                <img src=".\media\bear.jpg">
+                <img src="https://cdn.pixabay.com/photo/2015/09/02/12/55/dolphins-918752_960_720.jpg">
             </div>
             <div class="article-text">
                 Выше мы добавили последние стили. Задали цвет фону блока новостей. 
@@ -120,7 +120,7 @@
                 <div class="date">44.44.4444</div>
             </div>
             <div class="article-image">
-                <img src="media/swimmers.jpg">
+                <img src="https://cdn.pixabay.com/photo/2015/09/02/12/34/woman-918532_960_720.jpg">
             </div>
             <div class="article-text">
                 Введите свой ответ на вопрос. Вы можете сохранить свою работу и завершить её 
@@ -140,7 +140,7 @@
                 <div class="date">55.55.5555</div>
             </div>
             <div class="article-image">
-                <img src="media/woman.jpg">
+                <img src="https://cdn.pixabay.com/photo/2016/11/23/14/42/feet-1853291_960_720.jpg">
             </div>
             <div class="article-text">
                 На выполнение этого задания вам даётся три недели с открытия модуля. 
